--- a/src/netlify.toml
+++ b/src/netlify.toml
@@ -5,7 +5,7 @@
 
 [build]
   command = "npm run build"
-  publish = "dist"
+  publish = "build"
 
 [build.environment]
   SECRETS_SCAN_OMIT_KEYS = "REACT_APP_FIREBASE_API_KEY,REACT_APP_FIREBASE_APP_ID,REACT_APP_FIREBASE_AUTH_DOMAIN,REACT_APP_FIREBASE_MESSAGING_SENDER_ID,REACT_APP_FIREBASE_PROJECT_ID,REACT_APP_FIREBASE_STORAGE_BUCKET"
